<resources>
    <string name="app_name">TinyTask</string>
    <string name="action_settings">Settings</string>
    <string name="user">Nombre de usuario</string>
    <string name="password">Password</string>
    <string name="btn_login">Login</string>
    <string name="btn_cancelar">Cancelar</string>
    <string name="text_empty_credentials">Datos incompletos. Antes de continuar introduzca sus credenciales, por favor.</string>
    <string name="text_wrong_credentials">Credenciales invalidas. Intente de nuevo, por favor.</string>
    <string name="title_activity_admin">Administrador</string>
    <string name="title_activity_webservice">WebService</string>
    <string name="title_activity_technical">Técnico</string>
    <string name="action_webservice">WebService</string>
    <string name="action_github">GitHub</string>
    <string name="action_logout">Cerrar sesión</string>
    <string name="welcome">Bienvenido</string>

    <string name="item_item">Item:</string>
    <string name="item_business">Negocio:</string>
    <string name="item_phone">Teléfono:</string>
    <string name="item_website">Sitio web:</string>
    <string name="item_zipcode">Codigo postal:</string>

    <string name="description_task">Descripción</string>
    <string name="duration_task">Duración</string>
    <string name="type_task">Tipo de tarea</string>

    <string name="add_task_title">Crear tarea</string>
    <string name="add">Agregar</string>
    <string name="cancel">Cancelar</string>
    <string name="no_phone">No disponible</string>
    <string name="confirm_exit">¿Está seguro que desea cerrar la sesión?</string>
    <string name="confirm">Confirmación</string>
    <string name="yes">Si</string>
    <string name="no">No</string>

    <string name="assign_user">Asignación:</string>
    <string name="type_hability">Tipo de habilidad:</string>
    <string name="description">Descripción:</string>
    <string name="time_task">Tiempo asignado:</string>
    <string name="current_status">Estatus actual:</string>

    <string name="status_in_process">En proceso</string>
    <string name="statu_finish">Tarea terminada</string>
    <string name="minutes">minutos</string>

    <string name="error_no_description">Introduzca una breve descripción.</string>
    <string name="error_no_time">Introduzca una duración mayor a 0 minutos.</string>
    <string name="error_max_time">La duración de la tarea es demasiado larga</string>
    <string name="error_admin">El administrador solo puede asignar tareas a usuarios tecnicos.</string>
    <string name="empty_data">Antes de continuar, por favor introduzca la información completa.</string>


    <string name="message_remove_task">¿Finalizar tarea?</string>
    <string name="message_remove_task_2">Recuerde que solo las tareas realmente terminadas pueden eliminarse</string>
    <string name="message_remove_task_3">Si, Finalizar</string>
    <string name="message_remove_task_4">Tarea Finalizada</string>
    <string name="message_remove_task_5">Su tarea se marco como finalizada correctamente</string>
    <string name="message_remove_task_6">OK</string>

    <string name="message_task">¿Eliminar el registro?</string>
    <string name="message_task_2">Recuerde que el registro ya no se podra recuperar.</string>
    <string name="message_task_3">Si, Eliminar</string>
    <string name="message_task_4">Tarea eliminada</string>
    <string name="message_task_5">La tarea se eliminó correctamente</string>
    <string name="message_task_6">OK</string>

    <string name="message_assign_work">Se asignó una nueva tarea.</string>

    <string name="title_data_recovery">Información recuperada</string>
    <string name="message_data_recovery">La lista se recupero exitosamente de peticiones anteriores.</string>

    <string name="title_error">Oops...</string>
    <string name="message_data_error">Ocurrio un error al realizar la peticion al servicio web.</string>
</resources>
